--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
-    "axios": "^1.7.7",
     "next": "14.2.16",
+    "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.80.3",
